syntax = "proto3";

package transaction;

service Transactor {
  rpc NodeVersion(VersionRequest) returns (VersionResponse) {}
  rpc AddTransaction(TransactionRequest) returns (TransactionResponse) {}
  rpc DeleteTransaction(DeleteRequest) returns (TransactionResponse) {}
  rpc VoidTransaction(DeleteRequest) returns (TransactionResponse) {}
  rpc AddTag(TagRequest) returns (TransactionResponse) {}
  rpc DeleteTag(DeleteTagRequest) returns (TransactionResponse) {}
  rpc AddCurrency(CurrencyRequest) returns (TransactionResponse) {}
  rpc DeleteCurrency(DeleteCurrencyRequest) returns (TransactionResponse) {}
  rpc GetTB(TBRequest) returns (TBResponse) {}
}

message LineItem {
  string accountname = 1;
  string description = 2;
  string currency = 3;
  int64 amount = 4;
}

message TransactionRequest {
    string date = 1;
    string description = 2;
    repeated LineItem lines = 3;
    string signature = 4;
}

message DeleteRequest {
    string identifier = 1;
    string signature = 2;
}

message TransactionResponse {
    string message = 1;
}

message TagRequest {
    string account = 1;
    string tag = 2;
    string signature = 3;
}

message DeleteTagRequest {
    string account = 1;
    string tag = 2;
    string signature = 3;
}

message CurrencyRequest {
    string currency = 1;
    int64 decimals = 2;
    string signature = 3;
}

message DeleteCurrencyRequest {
    string currency = 1;
    string signature = 2;
}

message TBLine {
  string accountname = 1;
  repeated string tags = 2;
  int64 amount = 3;
  string currency = 4;
  int64 decimals = 5;
  string amountStr = 6;
}

message TBRequest {
    string date = 1;
}

message TBResponse {
    repeated TBLine lines = 1;
}

message VersionRequest {
    string message = 1;
}

message VersionResponse {
    string message = 1;
}
